[package]
name = "array_builder"
version = "0.1.4"
author = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Implementation example for the ArrayBuilder RFC"
license = "MIT"
homepage = "https://github.com/rust-lang/rfcs/pull/3131"
repository = "https://github.com/conradludgate/array_builder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
